# uploader

./: .gitignore  Caddyfile
backend/: .gitignore  config-example.toml  example.config.toml  launcher.py  main.py  pyproject.toml
backend/src/: __init__.py  app.py  config.py  controllers.py  database.py  enums.py  exceptions.py  logger.py  main.py  middleware.py  middlewares.py  models.py  openapi.py  security.py  settings.py  storage.py  types.py  utilities.py
backend/src/api/: __init__.py  common.py
backend/src/api/files/: __init__.py  common.py  delete_file.py  get_file.py  upload_file.py
backend/src/api/session/: __init__.py  create_session.py  login.py
backend/src/api/sessions/: __init__.py  create_session.py
backend/src/api/tokens/: __init__.py  create_token.py  generate_token.py  invalidate_token.py
backend/src/api/users/: __init__.py  get_current_user.py  get_user.py
backend/src/controllers/: __init__.py  files.py  me.py  users.py
backend/src/models/: __init__.py  common.py  error.py  file.py  permissions.py  upload.py  user.py
backend/src/objects/: __init__.py  file.py  upload.py  user.py
backend/src/routes/: __init__.py  common.py
backend/src/routes/api/: __init__.py  files.py  login.py  upload.py
backend/src/routes/files/: delete.py  get.py  patch.py  post.py
backend/src/routes/tokens/: post.py
backend/src/routes/users/: __init__.py  delete.py  get.py  patch.py
backend/src/routes/users/files/: __init__.py  delete.py  get.py  patch.py  post.py
backend/src/routes/users/id/: delete.py  get.py  patch.py
backend/src/routes/users/id/files/: delete.py  get.py  patch.py
backend/src/routes/users/id/uploads/: delete.py  get.py  patch.py
backend/src/routes/users/me/: delete.py  get.py  patch.py
backend/src/routes/users/me/files/: delete.py  get.py  patch.py  post.py
backend/src/routes/users/me/uploads/: delete.py  get.py  patch.py  post.py
backend/src/utilities/: __init__.py  helpers.py  security.py  strings.py
backend/tests/: client.py  passwords.py  tokens.py
backend/uploader/: app.py  config.py  contexts.py  decorators.py  enums.py  exceptions.py  logger.py  middlewares.py  types.py
backend/uploader/objects/: __init__.py  file.py  user.py
backend/uploader/routes/: __init__.py  files.py  login.py  upload.py
backend/uploader/utilities/: __init__.py  helpers.py  logging.py  parse.py  parsers.py
frontend/: .eslintrc.json  .gitignore  global.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.colours.js  tailwind.config.js  tailwind.config.mjs  tsconfig.json
frontend/app/: global.css  head.tsx  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/faq/: page.tsx
frontend/app/users/[id]/: page.tsx
frontend/components/navbar/: NavBar.tsx  index.ts  logo.psd  navbar.tsx
frontend/src/actions/: createUpload.ts  getFiles.ts  getUploads.ts  getUser.ts  login.ts  uploadFile.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx  theme.tsx
frontend/src/app/account/: page.tsx
frontend/src/hooks/: session.ts  useUser.ts
frontend/src/styles/: global.css
frontend/src/utilities/: array.ts  colours.ts  colours.types.ts
frontend/styles/: bootstrap.scss  global.scss
(+80 files in other folders)
