[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "uploader-backend"
version     = "1.0.0"
description = "The backend API for my media uploader."
authors     = ["Aaron Hennessey <aaronhnsy@gmail.com>"]

[tool.poetry.dependencies]
python            = "~3.12.0"
aiohttp           = "~3.9.0"
asyncpg           = "~0.29.0"
asyncpg-stubs     = "~0.29.0"
colorama          = "~0.4.0"
dacite            = "~1.8.0"
orjson            = "~3.9.0"
typing-extensions = "~4.9.0"

[tool.pyright]
include                = ["uploader", "tests", "launcher.py"]
pythonVersion          = "3.12"
typeCheckingMode       = "strict"
useLibraryCodeForTypes = true
reportUnknownMemberType = false

[tool.isort]
line_length                = 110
lines_after_imports        = 2
multi_line_output          = 9
include_trailing_comma     = true
extra_standard_library     = ["typing_extensions"]
