[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name         = "uploader-backend"
package-mode = false

[tool.poetry.dependencies]
python            = "~3.12.0"
aiohttp           = { version = "~3.9.0"  }
argon2-cffi       = { version = "~23.1.0" }
asyncpg           = { version = "~0.29.0" }
asyncpg-stubs     = { version = "~0.29.0" }
colorama          = { version = "~0.4.0"  }
passlib           = { version = "~1.7.0"  }
itsdangerous      = { version = "~2.2.0"  }
litestar          = { version = "~2.8.0", extras = ["standard", "pydantic", "redis"] }
orjson            = { version = "~3.10.0" }
typing-extensions = { version = "~4.11.0" }

[tool.pyright]
include                 = ["src"]
pythonVersion           = "3.12"
typeCheckingMode        = "strict"
useLibraryCodeForTypes  = true
reportUnknownMemberType = false

[tool.isort]
line_length            = 125
lines_after_imports    = 2
multi_line_output      = 9
include_trailing_comma = true
extra_standard_library = ["typing_extensions"]
